# progchain

./: .gitignore  DATABASE_SETUP.md  DOCKER.md  DOCKER_SETUP_SUMMARY.md  ENHANCED_ROADMAP.md  FEATURES.md  IMPLEMENTATION_CHECKLIST.md  Makefile  PROJECT_ANALYSIS.md  QUICKSTART.md  QUICK_START.md  README.md  ROADMAP.md  build.bat  compose.dev.yaml  compose.yml  docker-compose.test.yml
.claude/: settings.local.json
client/: .env.example  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  (+1 more)
server/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
server/src/: server.py
server/src/cache/: cache.py
server/src/config/: openai.py  prompt_types.py
server/src/core/: __init__.py
server/src/core/chat/: chat.py
server/src/core/file/: __init__.py  io.py  pdf.py
server/src/core/vector/: store.py
server/src/db/: __init__.py  config.py  mixins.py
server/src/decode/: __init__.py  json.py
server/src/fastapi_components/: __init__.py  app.py  req.py
server/src/features/: __init__.py
server/src/features/explore/: __init__.py  chat.py  handler.py  models.py  service.py  vector.py
server/src/features/roadmap/: __init__.py  generator.py  handler.py  models.py  service.py
server/src/features/threads/: __init__.py  chat.py  handler.py  llm.py  models.py  service.py
server/src/features/topics/: __init__.py  handler.py  lang.py  models.py  service.py  topics.py
server/src/test/: topics.py
server/tests/: __init__.py  conftest.py  test_database.py
(+84 files in other folders)
